# pythonWorkspace

./: .gitignore  02_파이썬_기초_문법(제어문)_blank.ipynb  04_실습 Solution.ipynb  04_실습.ipynb  04_판다스_blank.ipynb  05_시각화.ipynb  06_데이터분석_따릉이.ipynb  07_자연어_처리.ipynb  08_OPEN_API.ipynb  09_Beautifulsoup.ipynb  09_Beautifulsoup_수업.ipynb  10_Selenium.ipynb  10_Selenium_수업.ipynb  11_머신러닝_미리보기.ipynb  12_CDA.ipynb  README.md  pyproject.toml  데이터 분석 정리.md
